2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/Training_Record_Certification__c.object-meta.xml
<CustomObject>
    <label>Training Record &amp; Certification</label>
    <nameField>
        <label>Training Course:</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Record &amp; Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>