2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/fields/Certification_License_issued__c.field-meta.xml
<CustomField>
    <fullName>Certification_License_issued__c</fullName>
    <description>Certification / License issued:</description>
    <inlineHelpText>Certification / License issued:</inlineHelpText>
    <label>Certification / License issued</label>
    <length>150</length>
    <type>Text</type>
</CustomField>