2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/fields/Date_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Issue__c</fullName>
    <description>Date of Issue:</description>
    <inlineHelpText>Date of Issue:</inlineHelpText>
    <label>Date of Issue</label>
    <type>Date</type>
</CustomField>