2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/fields/Employee_Review_Form__c.field-meta.xml
<CustomField>
    <fullName>Employee_Review_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Review Form</label>
    <referenceTo>Employee_Review_Form__c</referenceTo>
    <relationshipLabel>Training Record &amp; Certifications</relationshipLabel>
    <relationshipName>Training_Record_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>