2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration Date:</description>
    <inlineHelpText>Expiration Date:</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>