2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Remarks:</description>
    <inlineHelpText>Remarks:</inlineHelpText>
    <label>Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>