2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/fields/Training_Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Training_Course_ID__c</fullName>
    <description>Training Course ID: Auto number is generated for each training records</description>
    <displayFormat>TR-{00000}</displayFormat>
    <inlineHelpText>Training Course ID: Auto number is generated for each training records</inlineHelpText>
    <label>Training Course ID:</label>
    <type>AutoNumber</type>
</CustomField>