2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <description>Training Date:</description>
    <inlineHelpText>Training Date:</inlineHelpText>
    <label>Training Date:</label>
    <type>Date</type>
</CustomField>