2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/fields/Training_Institution__c.field-meta.xml
<CustomField>
    <fullName>Training_Institution__c</fullName>
    <description>Training Course:</description>
    <inlineHelpText>Training Course:</inlineHelpText>
    <label>Training Institution</label>
    <length>150</length>
    <type>Text</type>
</CustomField>