2nd training/Community/Community/Community1/force-app/main/default/objects/Training_Record_Certification__c/listViews/Training_Course_Details.listView-meta.xml
<ListView>
    <fullName>Training_Course_Details</fullName>
    <columns>Training_Course_ID__c</columns>
    <columns>NAME</columns>
    <columns>Certification_License_issued__c</columns>
    <columns>Training_Date__c</columns>
    <columns>Training_Institution__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Date_of_Issue__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Mine</filterScope>
    <label>Training Course Details</label>
</ListView>